# Gamify-Life

./: flake.nix  meson.build
include/controller/: AppController.hpp  IProfileGateway.hpp  ITaskRepository.hpp  ProfileController.hpp  TaskController.hpp
include/model/: Date.hpp  Profile.hpp  Streak.hpp  Task.hpp
include/persistence/: InMemoryProfileGateway.hpp  InMemoryTaskRepository.hpp  StreakFactory.hpp
include/persistence/in_memory/: InMemoryProfileGateway.hpp  InMemoryTaskRepository.hpp
include/persistence/yaml/: YamlProfileGateway.hpp  YamlTaskRepository.hpp
include/view/: IFrontend.hpp
include/view/not_curses/: NotCursesCell.hpp  NotCursesFrontend.hpp  NotCursesInstance.hpp  NotCursesPlane.hpp  NotCursesWindow.hpp  WindowManager.hpp
include/view/not_curses/widgets/: DateUtil.hpp  Histogram.hpp  ScalingUtil.hpp  SelectionTable.hpp  StreakMatrix.hpp  Table.hpp  WidgetUtil.hpp
include/view/not_cursor/: NotCursorFrontend.hpp  NotCursorInstance.hpp  NotCursorPlane.hpp
resources/: profile.yaml  tasks.yaml
src/: main.cpp
src/controller/: AppController.hpp  ProfileController.cpp  TaskController.cpp
src/model/: Date.cpp  Profile.cpp  Streak.cpp  Task.cpp
src/persistence/: InMemoryProfileGateway.cpp  InMemoryTaskRepository.cpp
src/persistence/in_memory/: InMemoryProfileGateway.cpp  InMemoryTaskRepository.cpp
src/persistence/yaml/: YamlProfileGateway.cpp  YamlTaskRepository.cpp
src/view/not-curses/: NotCursesCell.cpp  NotCursesFrontend.cpp  NotCursesInstance.cpp  NotCursesPlane.cpp  Window.cpp  WindowManager.cpp
src/view/not-cursor/: NotCursorFrontend.cpp  NotCursorInstance.cpp  NotCursorPlane.cpp
(+19 files in other folders)
